# xoribot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  personas.yaml  pyproject.toml
.github/workflows/: ci-pr.yml  deploy.yml
src/ollama_tg_bot/: bot.py  config.py  docx_service.py  docx_tool.py  logging_config.py  main.py  ollama_client.py  personas.py  security.py  sessions.py  streaming.py  telegram_format.py  telegram_utils.py  transcription.py  web_search.py  whisper_client.py
src/ollama_tg_bot/config/: __init__.py
src/ollama_tg_bot/filters/: __init__.py  audio.py  docx.py
src/ollama_tg_bot/routes/: __init__.py  callbacks.py  messages.py
src/ollama_tg_bot/services/: __init__.py  docx.py  docx_tool.py  streaming.py
src/ollama_tg_bot/utils/: __init__.py  security.py  telegram_sender.py  telegram_utils.py  transcription.py
tools/searxng/: .env.example  README.md  docker-compose.yml  settings.yml
tools/whisper/: .env.example
