[project]
name = "xoribot"
version = "0.1.0"
description = "Lightweight Telegram bot for local Ollama chat"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiogram>=3.20.0",
  "aiohttp>=3.11.0",
  "aiohttp-socks>=0.10.1",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
]

[project.scripts]
xoribot = "ollama_tg_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_tg_bot"]
